@@ -1,3 +1,9 @@
+2004-06-18 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-task-cmd.c: Fixed bad string
+
+	* src/planner-calendar-dialog.c: Added undo for calendar day type
+
 2004-06-17  Richard Hult  <richard@imendio.com>
 
 	* src/planner-gantt-print.c: (planner_gantt_print_do): Handle
